# commerceops-openenv

./: .dockerignore  .gitignore  Dockerfile  Project-Context-2.txt  README.md  baseline.py  client.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_api.py  test_env.py  test_inference.py  test_models.py  test_scoring.py  test_submission_contract.py
app/: baseline_runner.py  main.py  scoring.py
app/api/: routes.py
app/env/: environment.py  grader.py  tasks.py
app/models/: schemas.py
server/: __init__.py  app.py
