[project]
name = "commerceops-openenv"
version = "0.1.0"
description = "OpenEnv benchmark for commerce support operations, payment triage, and fraud escalation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.128.8",
  "openai==1.109.1",
  "openenv-core>=0.2.0",
  "pydantic==2.12.5",
  "requests==2.32.5",
  "uvicorn==0.39.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
